Fixed container being slightly too large
Replaced padding-top and padding-bottom with height in textbox

(Also changed border-radius of textbox

--- a/Practice/12f.css
+++ b/Practice/12f.css
@@ -20,12 +20,11 @@ div{
 input{
   margin-top: 12px;
   margin-bottom: 12px;
-  padding-top: 9px;
-  padding-bottom: 9px;
   padding-left: 20px;
   width: 500px;
-  border-radius: 20px;
+  border-radius: 15px;
   border: none;
+  height: 30px;
 }
 
 .download{
